Dont lose your head!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Jjama</title>
 </head>
 <body>
-    <div class="llama head"></div>
+    <div class="head-wrapper">
+        <div class="llama ear ear1"></div>
+        <div class="llama ear ear2"></div>
+        <div class="llama head"></div>
+    </div>
     <div class="llama neck"></div>
     <div class="llama body"></div>
     <div class="llama leg frontleg"></div>
