Shifted the neck

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
         <div class="llama ear ear2"></div>
         <div class="llama head"></div>
     </div>
-    <div class="llama neck"></div>
-    <div class="llama body"></div>
-    <div class="llama leg frontleg"></div>
-    <div class="llama leg frontleg"></div>
-    <div class="llama leg haunch"></div>
-    <div class="llama leg haunch"></div>
-    <div class="llama leg frontleg"></div>
-    <div class="llama leg frontleg"></div>
+    <div class="neck-wrapper">
+        <div class="llama neck"></div>
+    </div>
+    <div class="body-wrapper">
+        <div class="llama body"></div>
+        <div class="llama leg frontleg"></div>
+        <div class="llama leg frontleg"></div>
+        <div class="llama leg haunch"></div>
+        <div class="llama leg haunch"></div>
+        <div class="llama leg frontleg"></div>
+        <div class="llama leg frontleg"></div>
+    </div>
 </body>
 </html>
