Everything is in place. Now with shading in #darkgoldenrod!

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     </div>
     <div class="body-wrapper">
         <div class="llama body"></div>
-        <div class="llama leg frontleg"></div>
-        <div class="llama leg frontleg"></div>
-        <div class="llama leg haunch"></div>
-        <div class="llama leg haunch"></div>
-        <div class="llama leg frontleg"></div>
-        <div class="llama leg frontleg"></div>
+        <div class="llama leg front1"></div>
+        <div class="llama leg front2"></div>
+        <div class="back-leg-wrapper">
+            <div class="llama haunch haunch1"></div>
+            <div class="llama haunch haunch2"></div>
+            <div class="llama leg back1"></div>
+            <div class="llama leg back2"></div>
+        </div>
     </div>
 </body>
 </html>
