Face! Tail! It's all happening!

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <div class="llama ear ear1"></div>
         <div class="llama ear ear2"></div>
         <div class="llama head"></div>
+        <div class="llama eye"></div>
+        <div class="llama nose"></div>
     </div>
     <div class="neck-wrapper">
         <div class="llama neck"></div>
     </div>
     <div class="body-wrapper">
         <div class="llama body"></div>
+        <div class="llama tail"></div>
         <div class="llama leg front1"></div>
         <div class="llama leg front2"></div>
         <div class="back-leg-wrapper">
