--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <div><button onClick="small()">smol</button></div>
+    <div><button class="butt" onClick="small()">smol</button></div>
 </body>
 </html>
