And if you gaze long into an abyss, the abyss also gazes into you.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="llama ear ear1"></div>
             <div class="llama ear ear2"></div>
             <div class="llama head"></div>
-            <div class="llama eye" onClick="small()"></div>
+            <div class="llama eye" onClick="eye()"></div>
             <div class="llama nose"></div>
         </div>
         <div class="neck-wrapper">
