--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div class="llama neck"></div>
         </div>
         <div class="body-wrapper">
+            <div class="poncho-tassles"></div>
+            <div class="poncho"></div>
             <div class="llama body"></div>
             <div class="llama tail"></div>
             <div class="llama leg front1"></div>
